feat: merge transaction
