# src/swagger.json
@@ -299,7 +299,7 @@
                     "transactions": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/TransactionInput"
+                        "$ref": "#/components/schemas/ResponseWithMessage"  
                       }
                     }
                   }
@@ -334,13 +334,52 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TransactionInput"
+                  "$ref": "#/components/schemas/ResponseWithMessage"  
                 }
               }
             }
           },
           "404": {
             "description": "Transaction not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/transaction/transactionlist/{pageNumber}": {
+      "get": {
+        "tags": ["retrieve transactions"],
+        "summary": "Read transaction list by page",
+        "parameters": [
+          {
+            "name": "pageNumber",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"  
+            },
+            "description": "Page number for transaction list"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "transaction list",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ResponseWithMessage"  
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "transaction list not found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -371,6 +410,76 @@
           }
         }
       }
+    },
+    "/api/transaction/next/{hashId}": {
+      "get": {
+        "tags": ["retrieve transactions"],
+        "description": "Retrieve a transaction by hash",
+        "parameters": [
+          {
+            "name": "hashId",
+            "in": "path",
+            "description": "The hashId of the transaction to retrieve",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Transaction retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResponseWithMessage"  
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Transaction not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/transaction/prev/{hashId}": {
+      "get": {
+        "tags": ["retrieve transactions"],
+        "description": "Retrieve a transaction by hash",
+        "parameters": [
+          {
+            "name": "hashId",
+            "in": "path",
+            "description": "The hashId of the transaction to retrieve",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Transaction retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ResponseWithMessage"  
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Transaction not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -388,49 +497,6 @@
             "default": "john.d@example.net"
           }
         }
-      },
-      "TransactionInput": {
-        "type": "object",
-        "properties": {
-          "hash": {
-            "type": "string"
-          },
-          "block": {
-            "type": "integer"
-          },
-          "senderAddress": {
-            "type": "string"
-          },
-          "amount": {
-            "type": "number"
-          },
-          "receiverAddress": {
-            "type": "string"
-          },
-          "value": {
-            "type": "number"
-          },
-          "gasPrice": {
-            "type": "number"
-          },
-          "transactionFee": {
-            "type": "number"
-          },
-          "gasLimit": {
-            "type": "number"
-          },
-          "gasUsed": {
-            "type": "number"
-          },
-          "gasFees": {
-            "type": "number"
-          },
-          "timestamp": {
-            "type": "string",
-            "format": "date-time"
-          }
-        },
-        "required": ["hash", "block", "senderAddress", "amount", "receiverAddress", "value", "gasPrice", "transactionFee", "gasLimit", "gasUsed", "gasFees", "timestamp"]
       },
       "ResponseWithMessage": {
         "type": "object",
